--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Layout</title>
+		<title>Triangles</title>
 		<meta name="viewport" content="width=device-width"/>
+		<link rel="stylesheet" href="styles/styles.css"/>
+		<link rel="stylesheet" href="//d5wfroyti11sa.cloudfront.net/prod/client/ts-10.0.22.min.css" integrity="sha384-kO15fdDynQLIAw10Mkuia+zNdp+gIpupZBAOfaeS0C5aV9O8dKZ4+sQkyLCMJnH2" crossorigin="anonymous"/>
+		<script src="//d5wfroyti11sa.cloudfront.net/prod/client/ts-10.0.22.min.js" integrity="sha384-epSh0rfUR3XpAcO0XJvYQkR7IYmB3D4ENZjBZlMRv5zIOLihp3MogT3o+ZNEYKPO" crossorigin="anonymous"></script>
+		<script src="js/triangle-detector.js"></script>
+
+				
 	</head>
-	<link rel="stylesheet" href="styles/styles.css"/>
-	<link rel="stylesheet" href="http://d5wfroyti11sa.cloudfront.net/prod/client/ts-10.0.22.min.css" integrity="" crossorigin="anonymous"/>
-	<script src="http://d5wfroyti11sa.cloudfront.net/prod/client/ts-10.0.22.min.js" integrity="" crossorigin="anonymous"></script>
-
-
-
 	<body>
 		<header data-ts="TopBar"></header>
 		<main data-ts="Main">
@@ -44,13 +44,11 @@
 				</div>
 			</div>
 		</main>
+		<script type="text/javascript">
+			ts.ui.ready(function() {
+				ts.triangleDetector = triangleDetector();
+
+			});
+		</script>
 	</body>
-	<script src="js/triangle-detector.js"></script>
-	<script type="text/javascript">
-
-		ts.ui.ready(function() {
-			ts.triangleDetector = triangleDetector();
-
-		});
-	</script>
 </html>
